[gd_scene load_steps=15 format=3 uid="uid://xyb6o5gqthi2"]

[ext_resource type="Script" uid="uid://brrk43wy7e488" path="res://player_ship.gd" id="1_vat7b"]
[ext_resource type="SpriteFrames" uid="uid://ch4im1rilc4hk" path="res://assets/Ships/ship_frames.tres" id="2_lxoi7"]
[ext_resource type="PackedScene" uid="uid://cfivlbe17p27t" path="res://auto_aim_cannon_controller.tscn" id="4_lqyru"]
[ext_resource type="Script" uid="uid://dicrof58losyh" path="res://health_based_sprite_component.gd" id="4_lv0p8"]
[ext_resource type="Script" uid="uid://dgkclkobpug1q" path="res://ship_movement_component.gd" id="6_vc7ef"]
[ext_resource type="PackedScene" uid="uid://llttm3t64occ" path="res://damage_area.tscn" id="7_1duo4"]
[ext_resource type="PackedScene" uid="uid://cqlgeb648geqt" path="res://cannon.tscn" id="7_jx5pu"]
[ext_resource type="PackedScene" uid="uid://kn70kmto5cby" path="res://abilities/barrel_dropping.tscn" id="8_5mroa"]
[ext_resource type="PackedScene" uid="uid://bqqm1hsravcgy" path="res://sound/sailing_sound.tscn" id="8_65ch3"]
[ext_resource type="Script" uid="uid://diciamkrxbr8n" path="res://hitpoints/health_component.gd" id="8_jx5pu"]
[ext_resource type="Script" uid="uid://bxaap6op8xe3g" path="res://abilities/side_cannons.gd" id="10_xdrds"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w07hb"]
radius = 16.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxoi7"]
size = Vector2(15, 15)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jx5pu"]
b = Vector2(1, 0)

[node name="PlayerShip" type="CharacterBody2D" groups=["players"]]
motion_mode = 1
script = ExtResource("1_vat7b")
max_health = 5
health = 5
power = 100
brakes = 100
steering = 25
ramming_damage = 1
projectile_damage = 1
cannon_cooldown = 2.0

[node name="HealthBasedSpriteComponent" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("health_component")]
rotation = -1.5708
sprite_frames = ExtResource("2_lxoi7")
animation = &"white"
script = ExtResource("4_lv0p8")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://dicrof58losyh"

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_w07hb")

[node name="FrontShape" type="CollisionShape2D" parent="."]
position = Vector2(41, 0)
rotation = 0.785398
shape = SubResource("RectangleShape2D_lxoi7")

[node name="RamArea" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("7_1duo4")]
position = Vector2(52, 0)
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RamArea"]
shape = SubResource("SegmentShape2D_jx5pu")

[node name="ShipMovementComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
unique_name_in_owner = true
script = ExtResource("6_vc7ef")
character = NodePath("..")
metadata/_custom_type_script = "uid://dgkclkobpug1q"

[node name="BarrelDropping" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("8_5mroa")]
unique_name_in_owner = true
parent = NodePath("..")

[node name="SailingSound" parent="." instance=ExtResource("8_65ch3")]

[node name="SideCannons" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
unique_name_in_owner = true
script = ExtResource("10_xdrds")
parent = NodePath("..")
metadata/_custom_type_script = "uid://bxaap6op8xe3g"

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_jx5pu")
metadata/_custom_type_script = "uid://diciamkrxbr8n"

[node name="CannonTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="Cannon" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("7_jx5pu")]
unique_name_in_owner = true
position = Vector2(40, 0)
parent = NodePath("..")

[node name="AutoAimCannonController" parent="Cannon" node_paths=PackedStringArray("cannon") instance=ExtResource("4_lqyru")]
cannon = NodePath("..")

[connection signal="health_updated" from="HealthComponent" to="." method="_on_health_component_health_updated"]
[connection signal="max_health_updated" from="HealthComponent" to="." method="_on_health_component_max_health_updated"]
[connection signal="timeout" from="CannonTimer" to="SideCannons" method="fire"]
[connection signal="timeout" from="CannonTimer" to="Cannon" method="fire"]
